--- a/custom.html
+++ b/custom.html
@@ -6,7 +6,7 @@
   --accent-color: var(--paper-yellow-a200);
 
   --paper-toolbar-color: white;
-  --paper-toolbar-title: { @apply(--paper-font-display1);};
+  --paper-toolbar-title: { @apply(--paper-font-headline);};
 
   --paper-spinner-color: white;
   --paper-fab: { color:black; opacity:var(--dark-secondary-opacity); };
