working on cards

--- a/custom.html
+++ b/custom.html
@@ -14,7 +14,8 @@
 
   }
 
-  paper-button.buy-ticket { background: var(--light-primary-color); }
-
+  paper-button.visit-wiki { background: var(--paper-deep-purple-100); }
+  paper-button.buy-ticket { background: var(--paper-indigo-100); }
+  paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
 </style>
