--- a/custom.html
+++ b/custom.html
@@ -15,7 +15,11 @@
   }
 
   paper-button.visit-wiki { background: var(--paper-deep-purple-100); }
+  paper-button.schedule { background: var(--paper-pink-100); }
+  paper-button.sharing { background: var(--paper-cyan-100); }
   paper-button.buy-ticket { background: var(--paper-indigo-100); }
+  paper-button.email-list { background: var(--paper-green-100); }
+  paper-button.source-code { background: var(--paper-amber-100); }
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
 </style>
