--- a/custom.html
+++ b/custom.html
@@ -22,4 +22,7 @@
   paper-button.source-code { background: var(--paper-amber-100); }
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
+  paper-toolbar.schedule { --paper-toolbar-background: var(--paper-pink-700); }
+  paper-toolbar.sharing { --paper-toolbar-background: var(--paper-cyan-700); }
+
 </style>
