--- a/custom.html
+++ b/custom.html
@@ -25,4 +25,6 @@
   paper-toolbar.schedule { --paper-toolbar-background: var(--paper-pink-700); }
   paper-toolbar.sharing { --paper-toolbar-background: var(--paper-cyan-700); }
 
+  .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
+
 </style>
