fix the panel-headers

--- a/custom.html
+++ b/custom.html
@@ -29,4 +29,11 @@
 
   a { text-decoration:none; }
 
+  body { font-family:Roboto; }
+
+  span.schedule { display:inline-block; width:220px; }
+
+  .schedule h1 { margin-bottom: 0px;}
+  .schedule h3 { margin-bottom: 0px;}
+
 </style>
