--- a/custom.html
+++ b/custom.html
@@ -20,10 +20,12 @@
   paper-button.buy-ticket { background: var(--paper-indigo-100); }
   paper-button.email-list { background: var(--paper-green-100); }
   paper-button.source-code { background: var(--paper-amber-100); }
+  paper-button.sponsors { background: var(--paper-light-blue-100); }
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
   paper-toolbar.schedule { --paper-toolbar-background: var(--paper-pink-700); }
   paper-toolbar.sharing { --paper-toolbar-background: var(--paper-cyan-700); }
+  paper-toolbar.sponsors { --paper-toolbar-background: var(--paper-light-blue-700); }
 
   .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
 
@@ -35,5 +37,7 @@
 
   .schedule h1 { margin-bottom: 0px;}
   .schedule h3 { margin-bottom: 0px;}
+
+  div.grey { background: var(--paper-grey-700); }
 
 </style>
