--- a/custom.html
+++ b/custom.html
@@ -14,6 +14,8 @@
 
   }
 
+  paper-fab { --paper-fab-background: var(--paper-yellow-a200); }
+
   paper-button.visit-wiki { background: var(--paper-deep-purple-100); }
   paper-button.schedule { background: var(--paper-pink-100); }
   paper-button.sharing { background: var(--paper-cyan-100); }
