make the FAB stand out

--- a/custom.html
+++ b/custom.html
@@ -9,7 +9,7 @@
   --paper-toolbar-title: { @apply(--paper-font-headline);};
 
   --paper-spinner-color: white;
-  --paper-fab: { color:black; opacity:var(--dark-secondary-opacity); };
+  --paper-fab: { color:black;  };
   --paper-fab-keyboard-focus-background: var(--paper-yellow-a100);
 
   }
