fix the schedule

--- a/custom.html
+++ b/custom.html
@@ -49,4 +49,9 @@
 
   paper-card.press-release { margin:0px 10px 10px 0px; }
 
+  table.schedule { margin-top:10px; font:var(--paper-font-headline);}
+  table.schedule th { text-align:left; padding-right:20px; width: 260px; }
+  table.schedule td { font-weight:bold; }
+
+
 </style>
