--- a/custom.html
+++ b/custom.html
@@ -24,6 +24,7 @@
   paper-button.source-code { background: var(--paper-amber-100); }
   paper-button.sponsors { background: var(--paper-indigo-100); }
   paper-button.conduct { background: var(--paper-deep-orange-100); }
+  paper-button.participate { background: var(--paper-blue-100); }
 
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
@@ -31,6 +32,7 @@
   paper-toolbar.sharing { --paper-toolbar-background: var(--paper-cyan-700); }
   paper-toolbar.sponsors { --paper-toolbar-background: var(--paper-indigo-700); }
   paper-toolbar.conduct { --paper-toolbar-background: var(--paper-deep-orange-700); }
+  paper-toolbar.participate { --paper-toolbar-background: var(--paper-blue-700); }
 
   .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
 
