button on the schedule for the unconference ticket

--- a/custom.html
+++ b/custom.html
@@ -25,6 +25,7 @@
   paper-button.sponsors { background: var(--paper-indigo-100); }
   paper-button.conduct { background: var(--paper-deep-orange-100); }
   paper-button.participate { background: var(--paper-blue-100); }
+  paper-button.free-ticket { background: var(--paper-pink-100); white-space:nowrap; text-transform:none; margin:20px 0px 20px 0px;}
 
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
 
@@ -55,6 +56,5 @@
   table.schedule th { text-align:left; padding-right:20px; width: 260px; }
   table.schedule td { font-weight:bold; }
 
-  span.schedule-sub { opacity: var(--dark-secondary-opacity); }
 
 </style>
