--- a/custom.html
+++ b/custom.html
@@ -25,6 +25,7 @@
   paper-button.sponsors { background: var(--paper-indigo-100); }
   paper-button.conduct { background: var(--paper-deep-orange-100); }
   paper-button.participate { background: var(--paper-blue-100); }
+  paper-button.prayer { color:var(--paper-indigo-900); }
   paper-button.free-ticket { background: var(--paper-pink-100); white-space:nowrap; text-transform:none; margin:20px 0px 20px 0px;}
 
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
@@ -34,6 +35,9 @@
   paper-toolbar.sponsors { --paper-toolbar-background: var(--paper-indigo-700); }
   paper-toolbar.conduct { --paper-toolbar-background: var(--paper-deep-orange-700); }
   paper-toolbar.participate { --paper-toolbar-background: var(--paper-blue-700); }
+  paper-toolbar.prayer { --paper-toolbar-background: white; color:black; }
+
+
 
   .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
 
@@ -52,9 +56,12 @@
 
   paper-card.press-release { margin:0px 10px 10px 0px; }
 
+  paper-card.prayer { cursor:pointer; }
+
   table.schedule { margin-top:10px; font:var(--paper-font-headline);}
   table.schedule th { text-align:left; padding-right:20px; width: 260px; }
   table.schedule td { font-weight:bold; }
 
+  .pswp__bg{ background: white; }
 
 </style>
