--- a/custom.html
+++ b/custom.html
@@ -17,7 +17,7 @@
   paper-fab { --paper-fab-background: var(--paper-yellow-a200); }
 
 
-  /* red *pink purple *deep-purple *indigo *blue light-blue *cyan teal *green */
+  /* red *pink *purple *deep-purple *indigo *blue light-blue *cyan teal *green */
   /* light-green lime yellow amber orange *deep-orange brown *grey blue-grey */
 
 
@@ -33,6 +33,7 @@
   paper-button.prayer { color:var(--paper-green-900); }
   paper-button.time { background:var(--paper-grey-100); }
   paper-button.government { background:var(--paper-purple-100); }
+  paper-button.school { background:var(--paper-light-blue-100); }
   paper-button.free-ticket { background: var(--paper-pink-100); white-space:nowrap; text-transform:none; margin:20px 0px 20px 0px;}
 
   paper-button { color: black; opacity:var(--dark-primary-opacity); }
@@ -45,7 +46,7 @@
   paper-toolbar.prayer { --paper-toolbar-background: white; color:black; }
   paper-toolbar.time { --paper-toolbar-background: var(--paper-grey-700); }
   paper-toolbar.government { --paper-toolbar-background: var(--paper-purple-700); }
-
+  paper-toolbar.school { --paper-toolbar-background: var(--paper-light-blue-700); }
 
 
   .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
@@ -72,5 +73,7 @@
   table.schedule td { font-weight:bold; }
 
   .pswp__bg{ background: white; }
+
+  paper-button.join-school { background:var(--paper-light-blue-100); }
 
 </style>
