bring in prayer imags

--- a/custom.html
+++ b/custom.html
@@ -30,7 +30,7 @@
   paper-button.sponsors { background: var(--paper-indigo-100); }
   paper-button.conduct { background: var(--paper-deep-orange-100); }
   paper-button.participate { background: var(--paper-blue-100); }
-  paper-button.prayer { color:var(--paper-green-900); }
+  paper-button.prayer { background: var(--paper-blue-grey-100); }
   paper-button.time { background:var(--paper-grey-100); }
   paper-button.government { background:var(--paper-purple-100); }
   paper-button.school { background:var(--paper-light-blue-100); }
