center the emoji

--- a/custom.html
+++ b/custom.html
@@ -80,5 +80,7 @@
   paper-button.join-school { background:var(--paper-light-blue-100); }
 
   paper-button.ilink {color:blue; text-transform:none; margin:0px; padding:0px; min-width:1em;}
-}
+
+  .twa { vertical-align:-1em; }
+  }
 </style>
