--- a/custom.html
+++ b/custom.html
@@ -82,5 +82,7 @@
   paper-button.ilink {color:blue; text-transform:none; margin:0px; padding:0px; min-width:1em;}
 
   .twa { vertical-align:-1em; }
+
+  span.icon { cursor:pointer; }
   }
 </style>
