--- a/custom.html
+++ b/custom.html
@@ -50,6 +50,7 @@
   paper-toolbar.school { --paper-toolbar-background: var(--paper-light-blue-700); }
   paper-toolbar.media { --paper-toolbar-background: var(--paper-light-teal-700); }
   paper-toolbar.wiki { --paper-toolbar-background: var(--paper-deep-purple-700); }
+  paper-toolbar.wiki-controls { --paper-toolbar-background: var(--paper-deep-purple-400); }
 
 
   .big { --iron-icon-height: 32px; --iron-icon-width: 32px; }
