better padding in wiki list

--- a/custom.html
+++ b/custom.html
@@ -85,5 +85,8 @@
   .twa { vertical-align:-1em; }
 
   span.icon { cursor:pointer; }
+
+  div.wiki-list paper-item { --paper-item-min-height: 32px;}
+
   }
 </style>
