margin on right or home icons

--- a/custom.html
+++ b/custom.html
@@ -84,7 +84,7 @@
 
   .twa { vertical-align:-1em; }
 
-  span.icon { cursor:pointer; }
+  span.icon { cursor:pointer; margin-right:20px; }
 
   div.wiki-list paper-item { --paper-item-min-height: 32px;}
 
