--- a/custom.html
+++ b/custom.html
@@ -87,6 +87,9 @@
   span.icon { cursor:pointer; margin-right:20px; }
 
   div.wiki-list paper-item { --paper-item-min-height: 32px;}
+  div.wiki-toc paper-item { --paper-item-min-height: 32px;}
+
+  paper-item.wiki-missing { color: red; };
 
   }
 </style>
