--- a/custom.html
+++ b/custom.html
@@ -89,7 +89,7 @@
   div.wiki-list paper-item { --paper-item-min-height: 32px;}
   div.wiki-toc paper-item { --paper-item-min-height: 32px;}
 
-  paper-item.wiki-missing { color: red; };
+  paper-item.wiki-missing { opacity:var(--dark-disabled-opacity); };
 
   }
 </style>
