fix media color

--- a/custom.html
+++ b/custom.html
@@ -48,7 +48,7 @@
   paper-toolbar.time { --paper-toolbar-background: var(--paper-grey-700); }
   paper-toolbar.government { --paper-toolbar-background: var(--paper-purple-700); }
   paper-toolbar.school { --paper-toolbar-background: var(--paper-light-blue-700); }
-  paper-toolbar.media { --paper-toolbar-background: var(--paper-light-teal-700); }
+  paper-toolbar.media { --paper-toolbar-background: var(--paper-teal-700); }
   paper-toolbar.wiki { --paper-toolbar-background: var(--paper-deep-purple-700); }
   paper-toolbar.wiki-controls { --paper-toolbar-background: var(--paper-deep-purple-400); }
 
